...
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_done_24"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck"
                android:id="@+id/edit_username"></EditText>

            <!--Espacio 20dp-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

...
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck"
                android:id="@+id/edit_password"></EditText>

            <!--Layout para el Recorda'm i contrasenya-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

...
            <!--Botón Login-->
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                app:cornerRadius="32dp"
                android:id="@+id/button_login"></com.google.android.material.button.MaterialButton>

            <!--Espacio 20dp-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

...
