<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seccion_Usuario"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            android:background="@color/blau_marino"
            android:theme="@style/Widget.AppCompat.Toolbar"
            app:popupTheme="@style/Theme.AppCompat.Light"
            app:titleTextColor="@color/white">

            <!-- Icon ImageView -->
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_white"
                android:layout_gravity="center_vertical" />

            <!-- Centered title TextView -->
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_gravity="center_vertical"
                android:text="  InformaVies CAT"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="28sp"/>
        </androidx.appcompat.widget.Toolbar>

        <!-- Título más grande -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="El teu compte d'usuari"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"/>

        <!-- Título más grande -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aquí pots editar el teu compte d'usuari, o eliminar-lo."
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/texto_informativo_modificar_usuario"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Atenció! L'edició o eliminació no es pot desfer."
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/warning_modificar_usuario"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="3dp"
            android:padding="10dp">

            <!-- Nom -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Nom">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:minLines="1"
                    android:id="@+id/nomTextView"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Cognom -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Cognom">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:minLines="1"
                    android:id="@+id/cognomTextView"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Username -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:minLines="1"
                    android:id="@+id/usernameTextView"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:minLines="1"
                    android:id="@+id/emailTextView"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:minLines="1"
                    android:id="@+id/passwordTextView"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Botón Modificar-->
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Modificar el meu compte"
                app:cornerRadius="32dp"
                android:id="@+id/button_modificar_usuari"/>

            <!--Botón Eliminar-->
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Eliminar el meu compte"
                app:cornerRadius="32dp"
                android:backgroundTint="@color/taronja"
                android:id="@+id/button_eliminar_usuari"/>


        </LinearLayout>


    </LinearLayout>


    <!-- FrameLayout to overlay FloatingActionButton on top of other views -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ... (your other views) ... -->

        <!-- FloatingActionButton -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/reportarIncidenciaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/blau_clar"
            android:src="@drawable/baseline_add_alert_24"
            app:fabSize="normal" />
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemIconTint="@color/blau_marino"
        app:itemTextColor="@color/black">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
