...


    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_reportar"
            android:icon="@drawable/baseline_add_alert_24"
...

    <item android:title="">

        <menu>

            <item
                android:id="@+id/nav_usuari"
                android:icon="@drawable/nav_usuari"
                android:title="@string/el_meu_compte_d_usuari" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
...
