...
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Benvingut/uda"
            android:id="@+id/saludoTextView"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/blau_marino"
...
