<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".MainActivity"
    android:id="@+id/alta_layout">

    <!--Este es el layout azul transparente encima de la foto-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blau_marino"
        android:alpha="0.6"/>

    <!--Este es el layout con el icono y el nombre de la app-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="28dp"
        android:layout_above="@id/card_view">

        <!--Icono en color blanco-->
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/icon_white"/>

        <!--Nombre de la app-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informavies_cat"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <!--Este es el layout con el card de color blanco-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        >

        <!--Layout linear vertical dentro de la tarjeta de color blanco-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <!--Titulo Alta d'usuari-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alta_d_usuari_a"
                android:textColor="@color/blau_marino"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <!--Espacio 10dp-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <!--Instrucciones-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Si us plau proporciona les seguents dades"
                android:alpha="0.7"/>

            <!--Espacio-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <!--Rótulo nom-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:alpha="0.7"
                style="bold"/>

            <!--TextInput para el nom-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck"
                android:id="@+id/edit_nom"/>

            <!--Espacio-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <!--Rótulo cognom-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cognom"
                android:alpha="0.7"
                style="bold"/>

            <!--TextInput para el cognom-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck"
                android:id="@+id/edit_cognom"/>

            <!--Espacio-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <!--Rótulo username-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:alpha="0.7"
                style="bold"/>

            <!--TextInput para el username-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck"
                android:id="@+id/edit_username"/>

            <!--Espacio-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <!--Rótulo email-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:alpha="0.7"
                style="bold"/>

            <!--TextInput para la contraseña-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck"
                android:id="@+id/edit_email"/>

            <!--Espacio-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>


            <!--Rotulo password-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:alpha="0.7"
                style="bold"/>

            <!--TextInput para la contraseña-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck"
                android:id="@+id/edit_password"/>



                <!--Checkbox-->
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accepto_els_termes_i_condicions"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"
                    android:id="@+id/eula"/>

            <!--Espacio 20dp-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <!--Botón Registre-->
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/registre"
                app:cornerRadius="32dp"
                android:id="@+id/button_registre"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

    </androidx.cardview.widget.CardView>

</RelativeLayout>