...
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Username</string>
    <string name="obre_menu">Obre el menu</string>
    <string name="tanca_menu">Tanca el menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_un_compte">Crear un compte</string>
    <string name="alta_d_usuari_a">Alta d\'usuari/a</string>
    <string name="nom">Nom</string>
    <string name="accepto_els_termes_i_condicions">Accepto els termes i condicions</string>
    <string name="registre">Registre</string>
    <string name="cognom">Cognom</string>
    <string name="incidencies_per_validar">Incidencies per validar</string>
...
